Fix a bug on input field on firefox

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -388,6 +388,8 @@ body {
   font-size: 16px;
   font-weight: bold;
   border-radius: 10px;
+  -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 .product-info input::-webkit-inner-spin-button {
